--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,8 +34,8 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #E8775D,
+  secondary:  #f4f4f4,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
