--- a/src/pages/business-detail/business-detail.scss
+++ b/src/pages/business-detail/business-detail.scss
@@ -1,3 +1,57 @@
 page-business-detail {
 
+    .btnBack {
+        max-height: 5%;
+        max-width: 7%;
+        margin: 18px 0;
+        margin-left: 100px;
+        margin-top: 20px;
+        font-size: 18px;
+      }
+
+      .title {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 23px;
+        letter-spacing: 2px;
+        margin-top: 15px;
+        margin-left: 20px;
+        width:200px;
+        height: 50px;
+        }
+
+        .edit {
+            margin-top: -20%;
+            margin-left: 80%;
+            width: 100px;
+        }
+
+        ion-img {
+            width: 90px;
+            height: 90px;
+            -webkit-border-radius: 50%;
+            border-radius: 50%;
+            margin-left: 35%;
+            margin-bottom: 10%;
+        }
+
+        ion-item {
+
+          .label {
+            color: silver;
+            margin: 0%;
+            font-size: 14px;
+  
+          }
+  
+          .field {
+            color: black;
+            margin: 0%;
+            margin-bottom: 30px;
+            font-size: 14px;
+
+          }
+
+        }
+
 }
